# BrowseMind

./: .env.example  .gitignore  README.md  browser_agent.py  pyproject.toml  requirements.txt
src/browsemind/: __init__.py  agent.py  browser.py  config.py  exceptions.py  llm.py  main.py  reliability.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_reliability.py
